# joss-dataset

./: .editorconfig  .gitignore  .isort.cfg  .markdownlint.json  .mdformat.toml  .pre-commit-config.yaml  .rad.json  AGENTS.md  CITATION.cff  Dockerfile  Makefile  README.md  _config.yml  pyproject.toml  requirements.txt  ruff.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml
.github/DISCUSSION_TEMPLATE/: implementations.yml  requests.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-enhancement.yml  feature-request.yml  🐛-bug-report-.md
.github/workflows/: build.yml  jekyll-gh-pages.yml  pre-commit.yml
analysis/: __init__.py  issue_spoilage_per_year.py  issues_per_year.py  label_frequency.py  top_labels_per_year.py  utils.py
joss/: __init__.py  cli.py  db.py  interfaces.py  logger.py  main.py  parsers.py  utils.py
joss/analysis/: issue_spoilage_per_year.py
joss/ingest/: __init__.py  github.py  github_issues.py  joss.py  repo_target.py
joss/joss/: __init__.py  extract.py  load.py  runner.py  transform.py
joss/transform/: joss.py  joss_submission.py  normalize_joss_submissions.py  schemas.py
scripts/: cloneGitHubReposFromTextFile.bash  csv2text.py  getGitHubReposToTextFile.bash
src/analysis/: issues_per_year.py
src/ingest/: github_issues.py
src/transform/: normalize_joss_submissions.py
tests/: test_db_migration.py  test_parsers.py  test_transform_mapping.py
