[project]
name = "joss"
version = "0.0.0"
description = "Journal of Open Source Software (JOSS) dataset"
authors = [{ name = "Nicholas M. Synovic", email = "nicholas.synovic@gmail.com" }]
requires-python = "~=3.13"
readme = "README.md"
keywords = ["oss", "academic", "dataset", "github-issues", "joss"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "requests",
    "progress",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.8",
]

[project.urls]
Homepage = "https://github.com/NicholasSynovic/joss-dataset"
Repository = "https://github.com/NicholasSynovic/joss-dataset"

[project.scripts]
src = "joss.main:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
